--- a/templates/Hello.html
+++ b/templates/Hello.html
@@ -4,9 +4,11 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-   <title>Document</title>
+   <title>Portfolio</title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   
  </head>
- <body>
+  <body>
    <h1>Hello, world!</h1>
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet
@@ -18,5 +20,5 @@
      <li>Second list item</li>
      <li>Third list item</li>
    </ul>
- </body>
+  </body>
 </html>
